--- a/res/layout/other_setting_popup.xml
+++ b/res/layout/other_setting_popup.xml
@@ -31,11 +31,8 @@
 
         <View style="@style/PopupTitleSeparator" />
 
-        <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <ListView android:id="@+id/settingList"
-                    style="@style/SettingItemList" />
+        <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+            <ListView android:id="@+id/settingList" style="@style/SettingItemList" />
         </FrameLayout>
     </LinearLayout>
 </com.android.camera.ui.OtherSettingsPopup>
