--- a/res/layout/priority_indicators.xml
+++ b/res/layout/priority_indicators.xml
@@ -39,6 +39,11 @@
             <ImageView android:id="@+id/onscreen_timer_indicator"
                     style="@style/OnScreenIndicator"
                     android:visibility="visible"/>
+
+            <ImageView android:id="@+id/onscreen_timer_indicator"
+                    style="@style/OnScreenIndicator"
+                    android:visibility="visible"/>
+
             <ImageView android:id="@+id/onscreen_white_balance_indicator"
                     style="@style/OnScreenIndicator"/>
             <TextView android:id="@+id/onscreen_exposure_indicator"
