--- a/res/xml/camera_preferences.xml
+++ b/res/xml/camera_preferences.xml
@@ -131,4 +131,25 @@
             camera:title="@string/pref_camera_redeyereduction_title"
             camera:entries="@array/pref_camera_redeyereduction_entries"
             camera:entryValues="@array/pref_camera_redeyereduction_entryvalues" />
+    <ListPreference
+            camera:key="pref_camera_storage_key"
+            camera:title="@string/pref_camera_storage_title" />
+    <ListPreference
+            camera:key="pref_camera_burst_key"
+            camera:defaultValue="@string/pref_camera_burst_entry_off"
+            camera:title="@string/pref_camera_burst_title"
+            camera:entries="@array/pref_camera_burst_mode_entries"
+            camera:entryValues="@array/pref_camera_burst_mode_values" />
+    <ListPreference
+            camera:key="pref_camera_jpeg_key"
+            camera:defaultValue="@string/pref_camera_jpeg_default"
+            camera:title="@string/pref_camera_jpeg_title"
+            camera:entries="@array/pref_camera_jpeg_entries"
+            camera:entryValues="@array/pref_camera_jpeg_entryvalues" />
+    <ListPreference
+            camera:key="pref_camera_timer_key"
+            camera:defaultValue="@string/pref_camera_timer_default"
+            camera:title="@string/pref_camera_timer_title"
+            camera:entries="@array/pref_camera_timer_duration_entries"
+            camera:entryValues="@array/pref_camera_timer_duration_values" />
 </PreferenceGroup>
